src/lib/snapshots/hemlis_lib__parser__tests__large_ints_in_type_sig.snap
---
source: src/lib/parser.rs
expression: "p_typ(\"2147483648\")"
---
8 of 8
===
Module
 Header
  MName
   (0, 7)->(0, 10)
  NULL
  (0, 0)->(0, 6)
  (0, 11)->(0, 16)
  (0, 0)->(0, 0)
  (0, 0)->(0, 0)
  Decl::Sig
   Name
    (2, 0)->(2, 1)
   Typ::Int
    Int
     (2, 5)->(2, 15)
===
