src/lib/snapshots/hemlis_lib__parser__tests__minimal_f.snap
---
source: src/lib/parser.rs
expression: "p_module(r\"\nmodule F () where\nderive newtype instance Eq Tag\n\")"
---
12 of 12
===
Module
 Header
  MName
   (1, 7)->(1, 8)
  (1, 0)->(1, 6)
  (1, 12)->(1, 17)
  (1, 9)->(1, 10)
  (1, 10)->(1, 11)
  Decl::Derive
   InstHead
    NULL
    QProperName
     NULL
     ProperName
      (2, 24)->(2, 26)
     Typ::Constructor
      QProperName
       NULL
       ProperName
        (2, 27)->(2, 30)
===
