src/lib/snapshots/hemlis_lib__parser__tests__minimal_h.snap
---
source: src/lib/parser.rs
expression: "p_module(r\"\nmodule H () where\n\nh = H { tag, attr, children }\n\nh  =HH\n        \")"
---
21 of 21
===
Module
 Header
  MName
   (1, 7)->(1, 8)
  (1, 0)->(1, 6)
  (1, 12)->(1, 17)
  (1, 9)->(1, 10)
  (1, 10)->(1, 11)
  Decl::Def
   Name
    (3, 0)->(3, 1)
   GuardedExpr::Unconditional
    Expr::App
     Expr::Constructor
      QProperName
       NULL
       ProperName
        (3, 4)->(3, 5)
     Expr::Record
      (3, 6)->(3, 7)
       RecordLabelExpr::Pun
        Name
         (3, 8)->(3, 11)
       RecordLabelExpr::Pun
        Name
         (3, 13)->(3, 17)
       RecordLabelExpr::Pun
        Name
         (3, 19)->(3, 27)
      (3, 28)->(3, 29)
  Decl::Def
   Name
    (5, 0)->(5, 1)
   GuardedExpr::Unconditional
    Expr::Constructor
     QProperName
      NULL
      ProperName
       (5, 4)->(5, 6)
===
