src/lib/snapshots/hemlis_lib__parser__tests__normal_definition.snap
---
source: src/lib/parser.rs
expression: "p_module(\"module A (a, b, c) where\")"
---
11 of 11
===
Module
 Header
  MName
   (0, 7)->(0, 8)
   Export::Value
    Name
     (0, 10)->(0, 11)
   Export::Value
    Name
     (0, 13)->(0, 14)
   Export::Value
    Name
     (0, 16)->(0, 17)
  (0, 0)->(0, 6)
  (0, 19)->(0, 24)
  (0, 9)->(0, 10)
  (0, 17)->(0, 18)
===
